--- a/style.css
+++ b/style.css
@@ -25,3 +25,15 @@ span.rotate{
     transform: rotate(180deg);
     display: inline-block;
 }
+
+#jam{
+    background: url(img/fire.gif);
+    width:400px;
+    height:400px;
+    background-size:cover;
+    -webkit-transform: translateY(-300px);
+    -moz-transform: translateY(-300px);
+    -ms-transform: translateY(-300px);
+    -o-transform: translateY(-300px);
+    transform: translateY(-300px);
+}
