--- a/style.css
+++ b/style.css
@@ -28,12 +28,36 @@ span.rotate{
 
 #jam{
     background: url(img/fire.gif);
+    position:absolute;
+    right:0;
+    top:0;
     width:400px;
     height:400px;
-    background-size:cover;
-    -webkit-transform: translateY(-300px);
-    -moz-transform: translateY(-300px);
-    -ms-transform: translateY(-300px);
-    -o-transform: translateY(-300px);
-    transform: translateY(-300px);
+}
+
+#dolphin{
+  position: absolute;
+  top:0;
+  left:0;
+  width:300px;
+  height:700px;
+  background:url(img/dolphin.gif);
+  background-size:cover;
+  background-position: left;
+  -webkit-animation-name: MOVE-BG;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes MOVE-BG {
+   0% {
+     background-position: left;
+   }
+   50% {
+     background-position: right;
+   }
+   100% {
+     background-position: left;
+   }
 }
