--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ h1{
     font-size:50px;
     border:20px solid white;
 }
+h1.swap{
+    background: url(img/anders.jpg);
+
+}
 h2{
   color:aqua;
   font-size:24px;
